# RCA_agent_backend

./: .env.example  CLAUDE.md  README.md  main.py  modal_app.py  pyproject.toml
.claude/skills/cognee-quickstart/: SKILL.md
app/: api.py  app.py  database.py  perf.py
app/action/: generate_rca.py  recall_similar_incidents.py  remember_incident.py
app/schemas/: incident.py
app/services/: incident_service.py
scripts/: recall_probe.py  reset_cognee.py  smoke_recall.py
