[project]
name = "rca-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee[groq]>=1.2.2",
    "fastapi>=0.138.2",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
